--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -6,17 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Another Todo App | Login</title>
 
-  <!-- update the version number as needed -->
-  <script defer src="/__/firebase/7.18.0/firebase-app.js"></script>
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script defer src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
+
   <!-- include only the Firebase features as you need -->
-  <script defer src="/__/firebase/7.18.0/firebase-auth.js"></script>
-  <script defer src="/__/firebase/7.18.0/firebase-firestore.js"></script>
-  <!-- initialize the SDK after all desired features are loaded -->
-  <script defer src="/__/firebase/init.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/7.18.0/firebase-auth.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/7.18.0/firebase-firestore.js"></script>
 
   <!-- add Firebase UI for auth -->
   <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+
+  <!-- initialize the SDK with our own script -->
+  <script defer src="/js/init.js"></script>
 
   <!-- our own script  -->
   <script defer src="/js/index.js"></script>
