--- a/demo/public/main.html
+++ b/demo/public/main.html
@@ -6,13 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Another Todo App | Main</title>
 
-  <!-- update the version number as needed -->
-  <script defer src="/__/firebase/7.18.0/firebase-app.js"></script>
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script defer src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
+
   <!-- include only the Firebase features as you need -->
-  <script defer src="/__/firebase/7.18.0/firebase-auth.js"></script>
-  <script defer src="/__/firebase/7.18.0/firebase-firestore.js"></script>
-  <!-- initialize the SDK after all desired features are loaded -->
-  <script defer src="/__/firebase/init.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/7.18.0/firebase-auth.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/7.18.0/firebase-firestore.js"></script>
+
+  <!-- add Firebase UI for auth -->
+  <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+
+  <!-- initialize the SDK with our own script -->
+  <script defer src="/js/init.js"></script>
 
   <!-- our own script  -->
   <script defer src="/js/main.js"></script>
@@ -33,10 +39,14 @@
       </div>
     </div>
 
-    <div class="add-item">
-      <input id="add-item-text" type="text" placeholder="Your todo here" />
-      <button id="add-item-btn">Add Item</button>
+    <div id="add-item" class="add-item">
+      <input type="text" placeholder="Your todo here" />
+      <button>Add Item</button>
     </div>
+  </div>
+
+  <div>
+    <a id="sign-out" href="">Sign out</p>
   </div>
 </body>
 
